--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,7 +124,7 @@ a {
 .username{
     float: right;
     margin-top: -48px;
-    margin-right: 150px;
+    margin-right:300px;
 }
 #navbar_menu{
     position:fixed;
@@ -259,14 +259,7 @@ a {
     border-width: thin;
     cursor: pointer;
 } 
-//.btn-default.active, .btn-default.focus, .btn-default:active, .btn-default:focus, .btn-default:hover, .open>.dropdown-toggle.btn-default {
-//   color: #fff;
-//    background-color: #120129;
-//    border-color: #204d74;
-//    border-style: solid;
-//    border-width: thin;
-//    cursor: pointer;
-//} 
+
 .btn-primary{
 
     color: #383838;
@@ -278,16 +271,28 @@ a {
     font-size: 75%;
     font-weight: 700;
 }
-//.btn-default{
-//   
-//    color: #000;
-//    background-color: #e2e2e2;
-//    border-style: groove;
-//    border-width: thin;
-//    border-color: #bda8c3;
-//    margin-bottom: 1px;
-//    margin:3px;
-//}
+
+.btn-secondary.active, .btn-secondary.focus, .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover, .open>.dropdown-toggle.btn-secondary {
+    color: #fff;
+    background-color: rgb(61, 117, 139);
+    border-color: #204d74;
+    border-style: solid;
+    border-width: thin;
+    cursor: pointer;
+} 
+
+.btn-secondary{
+
+    color: #383838;
+    background-color: #ececec;
+    border-style: groove;
+    border-width: thin;
+    border-color: #80b3cd;
+    margin-bottom: 1px;
+    font-size: 75%;
+    font-weight: 700;
+}
+
 .label-primary.active {
     margin-right: 1px;
     background-color: darkslateblue;
@@ -632,7 +637,7 @@ a {
 #profileLoggedIn{
     position: fixed;
     top: 17px;
-    right: 75px;
+    right: 65px;
     z-index: 2;
 }
 ol{
@@ -687,7 +692,7 @@ li{
     background-size: cover;
 }
 .profileTableView{
-    margin-top: 20px;
+    margin-top: 50px;
 }
 .scrollable{
     height: 750px;
@@ -1216,8 +1221,9 @@ li{
     line-height: 25px;
     border: 1px solid #acacac;
     border-radius: 3px;
-    background: -webkit-linear-gradient(top, #f0f9ff 0%, #cbebff 47%, #a1dbff 100%);
-    background: linear-gradient(to bottom, #f0f9ff 0%, #cbebff 47%, #a1dbff 100%);
+
+    background: -webkit-linear-gradient(top, #f0f9ff 0%, #cbebff 47%, #cbebff 100%);
+    background: linear-gradient(bottom, #f0f9ff 0%, #cbebff 47%, #cbebff 100%); */
 }
 .miniIcon{
     background-size: contain;
@@ -1244,4 +1250,188 @@ margin-right: 5px;
 }
 .interestTagWrapperUl{
     margin-left:-15px;
+}
+#connectButton{
+    float: right;
+    position: initial;
+    /* margin-top: -285px; */
+    /* margin-right: 5px; */
+}
+.feedSelection{
+    padding: 5px;
+        border-style: solid;
+        border-top: black;
+        /* border-bottom: black; */
+        /* border-top-width: 10px; */
+        /* border-bottom-width: thick; */
+        padding-bottom: 30p;
+        z-index: 10px;
+        border-left-style: none;
+        border-right-style: none;
+        margin-bottom: 10px;
+        margin-left: -15px;
+}
+#feedButtons{
+   margin-left:5px;
+}
+.tableGlyphLink{
+    float: right;
+    margin-top: 15px;
+    margin-right: 5px;
+}
+#tableDate{
+    font-size:small;
+}
+.tablePoints{
+    float: right;
+    margin-top: 15px;
+    margin-right: 20px;
+}
+.tableRowLeftProfile{
+    max-height: 150px;
+    overflow:auto;
+}
+.profileLeftTableBody{
+    overflow: auto;
+    min-height: 300px;
+}
+.profileColorBar{
+    position: absolute;
+    min-height: 20px;
+    /* background-color: rgb(4, 68, 25); */
+    width: 100%;
+    margin-top: -20px;
+    
+}
+#messageButton{
+    float:right;
+}
+.linksWrapperInput{
+}
+#profileColorInput{
+    margin-bottom: 25px;
+}
+#linksDisplayWrapper{
+    margin-top: 10px;
+    border-color: #3f165c;
+    border-style: outset;
+    border-radius: 5px;
+    border-width: thin;
+    margin-bottom: 10px;
+    
+}
+.profileLinks{
+    /* max-width: 300px; */
+    /* width: 300px; */
+    overflow: auto;
+    /* margin-left:-15px; */
+    margin-bottom:15px;
+}
+.profileLinksLeft{
+    
+    overflow: auto;
+    margin-left:-15px;
+    margin-bottom:15px;
+}
+
+#notificationBell{
+    position: fixed;
+    z-index: 1000;
+    /* float: right; */
+    right: 0px;
+    margin-right: 150px;
+    top: 17px;
+   
+}
+
+#notificationDiv{
+    position: fixed;
+    z-index: 1000;
+    max-width: 400px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 5px;
+    right: 0px;
+    margin-right: 20px;
+    border-color: #ebebeb;
+    border-style: groove;
+    margin-top:25px;
+    /* border-width: thin;*/
+}
+.activeIcon{
+    color: #950000;
+}
+#navProfileTitle{
+    font-style: italic;
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+    opacity: 1;
+    z-index: 4000;
+    position: absolute;
+}
+#navBarUserProfileInfo{
+    background-color: rgba(119, 119, 119,.8);
+    position: relative;
+    top: -130px;
+    color: white;
+    text-align: left;
+    font-size: small;
+}
+.circle {
+    border-radius: 25%;
+    width: 34px;
+    height: 34px;
+    padding: 1px;
+    padding-right: 3px;
+    margin-left: 5px;
+    background: #fff;
+    border: 1px solid #000;
+    color: #000;
+    text-align: center;
+  }
+ .circleNotification{
+    border-radius: 25%;
+    width: 24px;
+    height: 24px;
+    /* padding: 1px; */
+    /* padding-right: 3px; */
+    /* margin-left: 5px; */
+    background: #fff;
+    border: 1px solid #000;
+    color: #cb5858;
+    text-align: center;
+    position: fixed;
+    z-index: 10000;
+    right: 0px;
+    margin-right: 160px;
+    margin-top: -15px;
+ }
+  .circleProfileColor{
+    border-radius: 25%;
+    width: 34px;
+    height: 34px;
+    padding: 1px;
+    padding-right: 3px;
+    padding-left: 3px;
+    margin-left: 5px;
+    background: #000;
+    color: white;
+    /* border: 1px solid #000; */
+    /* color: #000; */
+    text-align: center;
+  }
+  #notification{
+    padding: 15px;
+    border: black;
+    border-style: outset;
+    border-left: none;
+    border-right: none;
+  }
+  #notificationContent{
+    padding-top: 5px;
+    padding-bottom:5px;
+}
+#notificationTIme{
+    font-style: italic;
 }
