--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,7 +124,7 @@ a {
 .username{
     float: right;
     margin-top: -48px;
-    margin-right:300px;
+    margin-right:200px;
 }
 #navbar_menu{
     position:fixed;
@@ -236,10 +236,7 @@ a {
 #tipTypeFilterWrapper{
     border-left-style: solid;
 }
-.navBarTopDiv{
 
-    font-size:large;
-}
 .minimize{
 
     height: 15px;
@@ -399,7 +396,7 @@ a {
     min-height: 100px;
 }
 .navBarBottomRowUserBioOverlapProfile{
-    background-color: rgba(119, 119, 119,.8);
+    background-color: rgba(255, 255, 255, 0.8);
     position: relative;
     top: -110px;
     color: white;
@@ -435,17 +432,19 @@ a {
     margin-top:-35px
 }
 .navBarTopDiv{
-    //background-color:#f3f3f3;
+  
     z-index:1;
     position:relative;
     color:#565656;
     padding:5px;
     border-radius: 5px;
     max-height: 50px;
-    overflow:auto;
-    
-    //opacity: .8;
+
+
     background: rgba(243, 243, 243,.8);
+    overflow: unset;
+    font-size:large;
+
 }
 #navBarWrapper{  
     background-color: white;
@@ -482,6 +481,7 @@ a {
     border-bottom-width:  thin;
     border-bottom-color: #d4d4d4;
     transition: max-height 0.5s ease-out;
+
 }
 
 .rightBarNavItem:hover{
@@ -954,12 +954,12 @@ li{
     z-index: 9;
     max-height: 800px;
  
-    max-width: 700px;
+    max-width: 800px;
     overflow: auto;
     padding-left: 0px;
   }
   .formContainer {
-    padding: 20px;
+    padding: 5px;
     background-color: #fff;
     
   }
@@ -1004,6 +1004,7 @@ li{
     overflow: auto;
     max-height: 650px;
     min-height:650px;
+    padding: 10px;
   }
 
   #imgUploadButtonsDiv{
@@ -1021,11 +1022,22 @@ li{
     border-width: thin; */
   
   }
-
+  #profileImageLeftNav{
+    width:90%;
+  }
   #pagesWidget{
     position: absolute;
     bottom: 0px;
     right: 0px;
+  }
+  .imgLeftMedium{
+     /* float: right; */
+     right: 0px;
+     /* margin-top: -50px; */
+     position: absolute;
+     z-index: 10000;
+     width: 80px;
+     height: 100%;
   }
  #flagDisplay{
     
@@ -1068,6 +1080,9 @@ li{
 
  .countrySelectClass{
     padding-right: 2px !important;
+ }
+ .leftNavBarFlag{
+    HEIGHT: 40px;
  }
 #tabFeed{
     
@@ -1125,9 +1140,9 @@ li{
 .profilePictureHorizonalScroll{
     max-height: 300px;
     /* background-color: #a5cc68;  */
-    overflow: auto;
+ 
     white-space: nowrap;
-    overflow-x:scroll;
+    overflow-x:hidden;
    
     padding-bottom:10px;
 
@@ -1233,6 +1248,21 @@ li{
     display: inline-block;
     width: 1.33333333em;
     line-height: 1em;
+}
+
+.mediumIconLink{
+    background-size: contain;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    position: relative;
+    display: inline-block;
+    width: 4.33333333em;
+    line-height: 1em;
+}
+
+
+.navBarBottomUserProfileRow{
+    max-height:5px;
 }
 
 #roleInputWrapper{
@@ -1350,6 +1380,7 @@ margin-right: 5px;
     max-width: 400px;
     background-color: white;
     padding: 15px;
+    padding-top: 0px;
     border-radius: 5px;
     right: 0px;
     margin-right: 20px;
@@ -1368,7 +1399,7 @@ margin-right: 5px;
     border-radius: 5px;
     opacity: 1;
     z-index: 4000;
-    position: absolute;
+    width: fit-content;
 }
 #navBarUserProfileInfo{
     background-color: rgba(119, 119, 119,.8);
@@ -1424,7 +1455,7 @@ margin-right: 5px;
   #notification{
     padding: 15px;
     border: black;
-    border-style: outset;
+    border-bottom-style: outset;
     border-left: none;
     border-right: none;
   }
@@ -1434,4 +1465,127 @@ margin-right: 5px;
 }
 #notificationTIme{
     font-style: italic;
+    margin-bottom:5px;
+}
+
+#arrowButtonsProfileImg{
+    font-size: 25px;
+    position:relative; 
+}
+
+#rightArrowProfileImg{
+    font-size: 25px;
+    position: absolute;
+    padding: 5px;
+    /* left: 10px; */
+    /* top: 360px; */
+    margin-top: -175px;
+    right: -10px;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+}
+.glyphButton.active{
+    color:red
+}
+
+
+#leftArrowProfileImg{
+    font-size: 25px;
+    position: absolute;
+    padding: 5px;
+    /* left: 10px; */
+    /* top: 360px; */
+    margin-top: -175px;
+    left: -10px;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+}
+
+.contentBlock {
+    font-size:10em;
+    text-align:center;
+    line-height:400px;
+    height:400px;
+    width:500px;
+    margin:10px;
+    border:1px solid black;
+    float:left;
+}
+#photoUserMessage{
+    font-style: italic;
+}
+    
+#primaryInputDiv{
+    position: relative;
+}
+#primaryInput{
+    position: absolute;
+    margin-top: -270px;
+    margin-left: -120px;
+}
+
+#scrollParent{
+    overflow-x: auto
+}
+
+.linkwrapperUrls{
+    padding:10px;
+}
+.divleftNavBarFlag{
+    margin-top: -50px;
+    position: relative;
+    z-index: -1;
+    height: 50px;
+}
+.colorProfileUserList{
+    
+    width: 5px;
+    height: 40px;
+    /* display: table-header-group; */
+    position: absolute;
+    /* float: right; */
+    left: 0px;
+    margin-left: 10px;
+    z-index: 1000;
+}
+#interestsDisplay{
+    border-style: solid;
+    border-width: thin;
+    padding: 10px;
+    border-radius: 5px;
+    border-color: #e3e2e2;
+    margin-left: -10px;
+    overflow: auto;
+    max-height: 200px;
+}
+#trendingWidgetWrapper{
+    margin-bottom: 20px;
+}
+.tipDescNavBar{
+    margin-top: -120px;
+
+}
+#navDescWrapper{
+    height: 100px;
+    margin-left: -10px;
+    z-index: 10000;
+     /* margin-top: -85px;  */
+    /* background: white; */
+    width: 98%;
+}
+.navBarImgContainer{
+    height: 125px;
+    position: relative;
+}
+.tipTitleWrapperNavBar{
+    padding-left:0px;
+}
+.backAndSubmitWrapperPopUp{
+    BACKGROUND-COLOR: #ffffff;
+    /* MARGIN: 5PX; */
+    BORDER-STYLE: solid;
+    BORDER-COLOR: #ffffff;
+    
 }
