--- a/views/profile.jade
+++ b/views/profile.jade
@@ -26,9 +26,16 @@ append body
 							.div.profileBio.row#userDataBio
 								span {{userData.bio}}
 							.div.profileLinksLeft.row
-								#link.row.clickableLink(ng-repeat="link in userData.links").col-lg-12.col-md-12.col-sm-12
+								span#link.clickableLink(ng-repeat="link in userData.links")
 									a#editProfileLink(ng-click="linkClicked(link)")
-										span {{link.url}}
+										image.mediumIconLink(ng-show="link.iconImg"  ng-src="icon/{{link.iconImg}}" data-toggle="tooltip" title="{{link.url}}")
+										//- span {{link.url}}
+								div.linkwrapperUrls
+									.row#link.clickableLink(ng-repeat="link in userData.links")
+										a#editProfileLink(ng-click="linkClicked(link)")
+											//-image.mediumIconLink(ng-show="link.iconImg"  ng-src="icon/{{link.iconImg}}" data-toggle="tooltip" title="{{link.url}}")
+											span {{link.url}}
+
 							.div.profileLinks.row
 								a#editProfileLink.clickableLink.col-lg-12.col-md-12.col-sm-12(ng-click='profileEditLinksClicked()')
 										span Edit Links
@@ -109,7 +116,7 @@ append body
 								//- //.div.imageWrapper.bannerWrapper.row(style='position:absolute')
 								//- 	img.col-xs-12.col-sm-12.col-md-12.col-xl-12(ng-src='{{profileInfo[0].image}}' style='height:250px')
 							hr
-							div.row.profileLeftDisplay     
+							div.row.profileLeftDisplay#interestsDisplay
 								div
 									h5      Interests     
 									//- span.glyphicon.glyphicon-knight.tabl(title="Interests" data-toggle="tooltip" data-placement="top" tooltip)
@@ -126,8 +133,8 @@ append body
 											
 						div.row.profileTableView()
 							+tab-list(["Top","Recent","Followers","Following","Favorites","Submitted"],0)#tablist
+									//- input(type='text').form-control#profileFilter		
 									+tab("Top","active")
-										
 										div.tipTableWrapper
 											//+table(["#","First Name","Last Name","Username"],[["1","Mark","Otto","@mdo"],["2","Jacob","Thornton","@fat"],["3","Larry","the Bird","@twitter"]])
 											div.row.table-striped.table-hover.tipTable
@@ -231,50 +238,57 @@ append body
 										div.tipTableWrapper
 													div.list-unstyled.row.hover(ng-repeat="user in userData.followers | orderBy : 'totalpoints':true | limitTo:10" ng-show="user.username")
 														.rightBarNavItem.row(ng-click="userNavBarClicked(user)" ng-mouseover='rightBarWidgetMouseOver(user)' ng-mouseleave='navBarHoverRightMouseLeave(user)')
-															.div.navBarTopDiv.row(ng-show='true'  style='')
-																.div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='padding-left:5px;margin-top:-5px;')
-																	.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-																		span#navProfileTitle(style='font-style: italic;background-color: white;padding: 5px;border-radius: 5px;opacity: 1;'){{user.username}}
-																	.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-																		span#flagDisplay(class="fi fi-{{user.country  | lowercase}}")																	
+															span.colorProfileUserList(ng-style="{'background-color':user.profileColor}")
+															.div.navBarTopDiv.navBarTopProfileColor.row(ng-show='true' )
+																.div(style='padding-left:5px;margin-top:-5px;')
+																	.div#navProfileTitle
+																		span(style='font-style: italic;background-color: white;padding: 5px;border-radius: 5px;opacity: 1;'){{user.username}}
 																	
-															.div.row.animated.navBarBottomUserProfileRow(ng-show='true' style='height:25px;')
-																div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' )
-																	img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.profileImageJson[0].image}}' style='')
-																div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0')
-																	img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.bannerImageJson[0].image}}' style='')
-															.div.row.navBarBottomRowUser#navBarUserProfileInfo( ng-show='user.hoverRightActive')
-																div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='margin-left:-5px')
-																	h4.nameWrapper(style='margin-bottom:5px;')
-																		span(ng-bind-html='user.profileMetaDataJson.firstName  | to_trusted')
-																		span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
-																	h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
-																	span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')
+																	
+																	.divleftNavBarFlag
+																		span#flagDisplay(class="fi fi-{{user.country  | lowercase}}")		
+																	div.imgNavWrapper.imgLeftMedium(ng-show='user.profileImageJson.length > 0' )
+																		img.hover.hidden-xs#profileImageLeftNav(ng-src='{{user.profileImageJson[0].image}}' style='')
+																	
+															//- .div.row.animated.navBarBottomUserProfileRow(ng-show='true' style='height:50px;')
+																	
+																													
+															//- 		div.imgNavWrapper(ng-show='user.profileImageJson.length > 0')
+															//- 			img.thumbnail.hover.hidden-xs(ng-src='{{user.bannerImageJson[0].image}}' style='')			
+																
+															//- .div.row.navBarBottomRowUser#navBarUserProfileInfo( ng-show='user.hoverRightActive')
+																
+																//- div(style='margin-left:-5px')
+																//- 	h4.nameWrapper(style='margin-bottom:5px;')
+																//- 		span(ng-bind-html='user.profileMetaDataJson.firstName  | to_trusted')
+																//- 		span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
+																//- 	h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
+																//- 	span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')
 									+tab("Following")
 										#followingCount(ng-hide="true")
 											span#followingCount {{userData.followings.length}}
 										div.tipTableWrapper
-													div.list-unstyled.row.hover(ng-repeat="user in userData.followings | orderBy : 'totalpoints':true | limitTo:10" ng-show="user.username")
-														.rightBarNavItem.row(ng-click="userNavBarClicked(user)" ng-mouseover='rightBarWidgetMouseOver(user)' ng-mouseleave='navBarHoverRightMouseLeave(user)')
-															.div.navBarTopDiv.row(ng-show='true'  style='')
-																.div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='padding-left:5px;margin-top:-5px;')
-																	.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-																		span#navProfileTitle(style='font-style: italic;background-color: white;padding: 5px;border-radius: 5px;opacity: 1;'){{user.username}}
-																	.div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-																		span#flagDisplay(class="fi fi-{{user.country  | lowercase}}")																	
-																	
-															.div.row.animated.navBarBottomUserProfileRow(ng-show='true' style='height:25px;')
-																div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' )
-																	img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.profileImageJson[0].image}}' style='')
-																div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0')
-																	img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.bannerImageJson[0].image}}' style='')
-															.div.row.navBarBottomRowUser#navBarUserProfileInfo( ng-show='user.hoverRightActive')
-																div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='margin-left:-5px')
-																	h4.nameWrapper(style='margin-bottom:5px;')
-																		span(ng-bind-html='user.profileMetaDataJson.firstName  | to_trusted')
-																		span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
-																	h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
-																	span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')													
+											div.list-unstyled.row.hover(ng-repeat="user in userData.followings | orderBy : 'totalpoints':true | limitTo:10" ng-show="user.username")
+												.rightBarNavItem.row(ng-click="userNavBarClicked(user)" ng-mouseover='rightBarWidgetMouseOver(user)' ng-mouseleave='navBarHoverRightMouseLeave(user)')
+													.div.navBarTopDiv.row(ng-show='true'  style='')
+														.div.usernameAndFlag(style='padding-left:5px;margin-top:-5px;')
+															.div
+																span#navProfileTitle(style='font-style: italic;background-color: white;padding: 5px;border-radius: 5px;opacity: 1;'){{user.username}}
+															.div
+																span#flagDisplay(class="fi fi-{{user.country  | lowercase}}")																	
+															
+													.div.row.animated.navBarBottomUserProfileRow(ng-show='true' style='height:5px;')
+														div.imgNavWrapper(ng-show='user.profileImageJson.length > 0' )
+															img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.profileImageJson[0].image}}' style='')
+														div.imgNavWrapper(ng-show='user.profileImageJson.length > 0')
+															img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.bannerImageJson[0].image}}' style='')
+													.div.row.navBarBottomRowUser#navBarUserProfileInfo( ng-show='user.hoverRightActive')
+														div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='margin-left:-5px')
+															h4.nameWrapper(style='margin-bottom:5px;')
+																span(ng-bind-html='user.profileMetaDataJson.firstName  | to_trusted')
+																span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
+															h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
+															span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')													
 									+tab("Favorites")
 										//h1 My Tips
 										div.tipTableWrapper
@@ -379,8 +393,9 @@ append body
 			.profilePageCenter.col-sm-6.col-md-6.col-lg-6.col-xs-6
 				.profileNotify(ng-show="!isLoggedIn()")
 				.profilePageBanner.contentWrapper(ng-show="isLoggedIn()" style='height: 300px;')
-					.div.row(ng-style="{'background-image': 'url(' + profileBannerImagesUploaded[0].image + ')'}" style='background-size: cover;background-size: contain;height: 100%;')
-						.div.profileImageWrapper.thumbnail()(ng-style="{'background-image': 'url(' + profileImagesUploaded[0].image + ')'}")
+					.div.row(ng-style="{'background-image': 'url(' + userData.profileBannerImagesUploaded[0].image + ')'}" style='background-size: cover;background-size: contain;height: 100%;')
+						.div.profileImageWrapper.thumbnail()(ng-show="userData.primaryImg != null" ng-style="{'background-image': 'url(' + userData.primaryImg + ')'}")
+						.div.profileImageWrapper.thumbnail()(ng-show="userData.primaryImg == null" ng-style="{'background-image': 'url(' + userData.profileImagesUploaded[0].image + ')'}")
 				.div.feedSelection.row
 						span#leftProfileButtons
 							//- .col-lg-5.col-md-5
@@ -659,30 +674,10 @@ append body
 									div.col-xs-12.col-sm-12.col-md-12.col-lg-12
 										div#navDescWrapper(ng-bind-html='tip.tipDescJson[1].tipDescription  | to_trusted' style='margin-left:-10px;padding-right: 10px;')
 					.rightWidetWrapper
-						#header(style='display:inline-block')
-							#labelSort
-								.label.label-info Top Users
-							select#dropdownWrapper(style='float:left' ng-model='filterPeriodTopUsersDropDown')
-									option(ng-repeat='sortFilter in rightBarSortFiltersArray' ng-value='sortFilter')
-										span {{sortFilter}}
-						div.list-unstyled.row.hover(ng-repeat="user in topUsers | orderBy : 'totalpoints':true | limitTo:10" ng-show="user.userName")
-							.rightBarNavItem.row(ng-click="userNavBarClicked(user)" ng-mouseover='rightBarWidgetMouseOver(user)' ng-mouseleave='navBarHoverRightMouseLeave(user)')
-								.div.navBarTopDiv.row(ng-show='true'  style='')
-									.div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='padding-left:5px')
-										span#navTipTitle.userNameLabel(){{user.userName}}
-										span#navTipTitle(style='float:right'){{user.totalpoints}}
-								.div.row.animated.navBarBottomRow(ng-show='true' style='height:125px;margin-top:-20px')
-									div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' style='padding:0px;height:125px')
-										img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.profileImageJson[0].image}}' style='min-height: 100px;margin-top:10px;padding:0px;')
-									div.col-xs-6.col-sm-6.col-md-6.col-lg-6.imgNavWrapper(ng-show='user.profileImageJson.length > 0' style='padding:0px;height:125px')
-										img.thumbnail.hover.hidden-xs.col-sm-12.col-md-12.col-lg-12(ng-src='{{user.bannerImageJson[0].image}}' style='max-height: 100px;margin-top:10px;padding:0px;')
-								.div.row.navBarBottomRowUserBioOverlapProfile( ng-show='user.hoverRightActive')
-									div.col-xs-12.col-sm-12.col-md-12.col-lg-12(style='margin-left:-5px')
-										h4.nameWrapper(style='margin-bottom:5px;')
-											span(ng-bind-html='user.profileMetaDataJson.firstName  | to_trusted')
-											span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
-										h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
-										span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')
+						#trendingWidget(ng-if="showTrendingWidget" ng-controller="trendingWidgetController")
+							trending-widget
+						//- block rightNavTrendingWidget
+						
 							
 					.rightWidetWrapper
 						#header(style='display:inline-block')
