update for apache

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -94,8 +94,8 @@ html(lang="en" ng-app='myApp')
                         script(src='javascripts/notificationController.js')
                         script(src='javascripts/trendingWidgetController.js')
                         script(src='javascripts/popUpService.js')
-                        script(src='javascripts/FeedService.js')
-                        script(src='javascripts/NotificationService.js')
+                        script(src='javascripts/feedService.js')
+                        script(src='javascripts/notificationService.js')
                         script(src='javascripts/filters.js')
                         script(src='javascripts/directives.js')
                         script(src='javascripts/ng-country-select.js')
